# showdowner

./: .gitignore  Makefile  README.md  comparison_latest.json
.github/tools/: update_readme.py
.github/workflows/: benchmark.yml
c/: Makefile
c/src/: benchmark.c  benchmark.h  main.c  output.c  output.h
compare/: compare  go.mod  main.go
cpp/: CMakeLists.txt
cpp/src/: benchmark.cpp  benchmark.h  main.cpp  output.cpp  output.h
csharp/: Benchmark.cs  BenchmarkResult.cs  CSharpBenchmark.csproj  Output.cs  Program.cs
dart/: pubspec.yaml
dart/lib/: benchmark.dart  benchmark_result.dart  output.dart
go/: benchmark.go  go.mod  main.go  output.go
java/: pom.xml
java/src/main/java/com/benchmark/: Benchmark.java  BenchmarkResult.java  Main.java  Output.java
javascript/: benchmark.js  main.js  output.js  package.json
julia/: Manifest.toml  Project.toml  main.jl
julia/src/: benchmark.jl  benchmark_result.jl  output.jl
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/benchmark/: Benchmark.kt  BenchmarkResult.kt  Main.kt  Output.kt
php/: benchmark.php  main.php  output.php
python2/: benchmark.py  main.py  output.py
python3/: benchmark.py  main.py  output.py
ruby/: benchmark.rb  main.rb  output.rb
rust/: Cargo.toml
rust/src/: benchmark.rs  main.rs  output.rs
scala/: build.sbt
scala/src/main/scala/com/benchmark/: Benchmark.scala  (+2 more)
swift/: Package.swift
swift/Sources/SwiftBenchmark/: Benchmark.swift  BenchmarkResult.swift  Output.swift  main.swift
typescript/: package.json
typescript/src/: benchmark.ts  main.ts  output.ts
